# nautlius-extensions

./: CMakeLists.txt  README.md  open-in-vscode.py
extensions/: CMakeLists.txt  logging.c  logging.h
extensions/open-in-vscode/: CMakeLists.txt  entrypoint.c  open-in-vscode.c  open-in-vscode.h  utilities.c  utilities.h
open-in-vscode/: CMakeLists.txt
open-in-vscode/src/: CMakeLists.txt  open-in-vscode.c
